Fri May 15 19:06:09 CEST 2009 Guido Günther <agx@sigxcpu.org>

	Reduce number of translations by filtering the error messages
	extracted from Kerberos com_err .et files.
	* etpo/Makefile.am: add rule for generating dummy-stings.c
	* src/dummy-strings.c: regenerate

Fri May 15 19:04:11 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/potfiles.in: mark GtKBuilder ui files as glade
	  so they get picked up by intltool

Wed May 13 22:10:45 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-dialog.c (ka_error_dialog): translate Kerberos error
	  messages.

Wed May 13 20:46:03 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* etpo/lexer.c: update regex for newer com_err

Tue May 12 00:31:56 CEST 2009 Guido Günther <agx@sigxcpu.org>

	merge schema translations and use gconftool to install the schema
	* configure.ac: Check for gcontool and add AM_GCONF_SOURCE_2.
	* po/POTFILES.in: Add src/krb5-auth-dialog.schemas.in.
	* preferences/Makefile.am: Remove schemadir.
	* src/Makefile.am: Add INTLTOOL_SCHEMAS_RULE and add
	  install-data-local target to install via gconftool.
	* src/krb5-auth-dialog.schemas.in: Don't use ::PACKAGE:: since .in is
	  transformed by intltool now.
	BZ: #581906 - patch by Christian Persch

Mon May 11 00:46:24 CEST 2009 Guido Günther <agx@sigxcpu.org>

	cleanup CFLAGS handling, terminate all lists with $(NULL)
	* configure.ac: don't set CFLAGS
	* src/Makefile.am (krb5_auth_dialog_{CPP,C}FLAGS): set instead of
	  CFLAGS
	* preferences/Makefile.am (krb5_auth_dialog_preferenes_{CPP,C}FLAGS):
	  likewise
	BZ: #581901 - based on a patch by Christian Persch

Sun May 10 22:20:38 CEST 2009 Guido Günther <agx@sigxcpu.org>

	update .gitignore files
	* src/.gitignore: add DBUS service file
	* preferences/.gitignore: new file

Sun May 10 22:10:11 CEST 2009 Guido Günther <agx@sigxcpu.org>

	make checking for deprecated symbols easy
	* src/Makefile.am: add $(DISABLE_DEPRECATED)
	* preferences/Makefile.am: likewise