@@ -1,5 +1,7 @@
 /* Generated by hand via "cd etpo; make update-etpo" from /tmp/krb5-1.6.dfsg.4~beta1/ */
-const char *dummy = {
+#include <glib/gi18n.h>
+
+const char *dummy[] = {
 	N_("ASN.1 failed call to system time library"),	/* asn1_err.et:asn1:ASN1_BAD_TIMEFORMAT */
 	N_("ASN.1 structure is missing a required field"),	/* asn1_err.et:asn1:ASN1_MISSING_FIELD */
 	N_("ASN.1 unexpected field number"),	/* asn1_err.et:asn1:ASN1_MISPLACED_FIELD */
@@ -262,4 +264,5 @@ const char *dummy = {
 	N_("Bad magic number for passwd_phrase_element"),	/* kv5m_err.et:kv5m:KV5M_PASSWD_PHRASE_ELEMENT */
 	N_("Bad magic number for GSSAPI OID"),	/* kv5m_err.et:kv5m:KV5M_GSS_OID */
 	N_("Bad magic number for GSSAPI QUEUE"),	/* kv5m_err.et:kv5m:KV5M_GSS_QUEUE */
+	NULL
 };
